# protochain

./: .clippy.toml  .dockerignore  .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  buf.yaml  change-impact-map.md  claude.md  docker-compose.yml  go.mod  go.work  go.work.sum  package.json  repository-tooling-TODO.md  rustfmt.toml  test-websocket-connectivity.rs  test-websocket.js  test-websocket.py  ws-test.js
.claude/: settings.local.json
.claude/commands/: execute-project.md  prepare-project.md
api/: Cargo.toml  README.md
api/src/: config.rs  lib.rs  main.rs
api/src/api/: aggregator.rs  api.rs  mod.rs
api/src/api/account/v1/: account_v1_api.rs  mod.rs  service_impl.rs
api/src/api/common/: mod.rs  solana_conversions.rs
api/src/api/program/: manager.rs  mod.rs  program.rs
api/src/api/program/system/: manager.rs  mod.rs  system.rs
api/src/api/program/system/v1/: conversion.rs  mod.rs  service_impl.rs  system_program_v1_api.rs
api/src/api/program/system/v1/service_impl/: tests.rs
api/src/api/program/token/: mod.rs
api/src/api/program/token/v1/: mod.rs  service_impl.rs  token_v1_api.rs
api/src/api/rpc_client/: mod.rs
api/src/api/rpc_client/v1/: mod.rs  service_impl.rs
api/src/api/transaction/v1/: mod.rs  service_impl.rs  transaction_v1_api.rs  validation.rs
api/src/service_providers/: container.rs  mod.rs  service_providers.rs  solana_clients.rs
api/src/websocket/: manager.rs  manager_old.rs  mod.rs
app/solana/ci/: Dockerfile  README.md  docker-build.sh
app/solana/ci/api/: Dockerfile
app/solana/cmd/api/: Cargo.toml  Cargo.toml.backup  README.md
app/solana/cmd/api/src/: config.rs  lib.rs  main.rs
app/solana/cmd/api/src/api/: aggregator.rs  mod.rs
app/solana/cmd/api/src/api/account/: mod.rs
app/solana/cmd/api/src/api/account/v1/: account_v1_api.rs  mod.rs  service_impl.rs
app/solana/cmd/api/src/api/common/: mod.rs  transaction_monitoring.rs
app/solana/cmd/api/src/api/program/: manager.rs
app/solana/cmd/api/src/api/program/system/: manager.rs
app/solana/cmd/api/src/api/program/system/v1/: mod.rs  service_impl.rs  system_program_v1_api.rs
app/solana/cmd/api/src/api/program/token/v1/: mod.rs  service_impl.rs
app/solana/cmd/api/src/api/rpc_client/v1/: rpc_client_v1_api.rs
app/solana/cmd/api/src/api/transaction/: mod.rs
app/solana/cmd/api/src/api/transaction/v1/: error_builder.rs  mod.rs  service_impl.rs  validation.rs
app/solana/cmd/api/src/service_providers/: container.rs  solana_clients.rs
app/solana/cmd/api/src/websocket/: manager.rs  manager_old.rs
app/template/cmd/some-executable/: README.md  go.mod  main.go
lib/_code_gen/: README.md  buf.gen.go.docker.yaml  buf.gen.go.yaml  buf.gen.rust.yaml  buf.gen.ts.yaml  buf.gen.yaml
lib/go/: .gitignore  go.mod  go.sum
lib/go/common/: baseGrpcClient.go  grpcClientConnection.go  grpcServer.go  grpcServerImpl.go  serviceConfig.go
lib/rust/: .gitignore  Cargo.toml  README.md  build.rs
lib/rust/src/: lib.rs
lib/ts/: .eslintrc.json  .gitignore  .prettierignore  README.md  package.json  tsconfig.json
lib/ts/src/: index.ts  server-services.ts  types.ts
lib/ts/src/api/: ProtoSolAPI.ts  ProtoSolAPIContext.tsx  useAPIContext.ts
lib/ts/src/services/: AccountService.ts  SystemProgramService.ts  TokenProgramService.ts  TransactionService.ts
projects/: .claude-task-template  README.md  todos.md
projects/0_add-rpc-client-wrapper/: .claude-task  implementation-plan.md  prompt.md
projects/1_add-token-program/: implementation-plan-progress.md  prompt.md
projects/3_stream-transaction-updates/: requirements.md
projects/4_token-program-method-extensions_1_initialiseHoldingAccount/: implementation-plan.md
projects/6_ui-sdk-test-forms/: .claude-task  implementation-plan.md  prompt.md
projects/7_ui-finish-forms/: .claude-task  implementation-plan.md  prompt.md
projects/8_token-program-method-extensions_3/: .claude-task  implementation-plan.md  prompt.md
projects/9_fix_txn_monitoring/: .claude-task  bug-report.md  implementation-plan.md  prompt.md
projects/add-rpc-client-wrapper/: .claude-task
projects/add-token-program/: .claude-task  implementation-plan.md  prompt.md
projects/stream-transaction-updates/: implementation-plan.md  prompt.md  rules.md
projects/todos/: 1.md  2.md  3.md
projects/token-program-method-extensions_1_initialiseHoldingAccount/: .claude-task  prompt.md
projects/token-program-method-extensions_2/: .claude-task  implementation-plan.md  prompt.md
projects/ui-sdk-test-forms/: .claude-task  implementation-plan.md  prompt.md
scripts/: lint.sh
scripts/code-gen/clean/: all.sh  go.sh  rust.sh  typescript.sh
scripts/code-gen/generate/: all.sh  go.sh
scripts/lint/: all.sh  fix.sh  go.sh  rs.sh  ts.sh
scripts/tests/: start-backend.sh  start-docker.sh  start-validator-docker.sh  start-validator.sh  stop-backend.sh  stop-docker.sh  stop-validator-docker.sh  stop-validator.sh
test-websocket/: Cargo.toml
test-websocket/src/: main.rs
tests/: README.md
tests/ci/: .dockerignore  Dockerfile
tests/go/: README.md  composable_e2e_test.go  go.mod  go.sum  rpc_client_e2e_test.go  solana-api-app-rpc_error_categories.go  streaming_e2e_test.go  token_program_e2e_test.go
tests/go/ci/: Dockerfile
tests/go/config/: config.go
tests/scripts/: network-manipulation.sh  run-error-categories-test.sh
tests/ts/: package.json  run-tests.ts  test-account.ts  test-rpc.ts  test-system.ts  test-token.ts  test-transaction.ts  tsconfig.json
tool/protoc-gen/cmd/protochaingo/: go.mod  main.go
tool/protoc-gen/cmd/protosolgo/: go.mod  (+1 more)
ui/: .eslintrc.json  .prettierrc  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
ui/.next/: build-manifest.json  postcss.js  prerender-manifest.json  trace
ui/.next/cache/: .rscinfo
ui/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ProtoSolDashboard.tsx  ProtochainDashboard.tsx  ServicePage.tsx  Sidebar.tsx
ui/src/lib/: grpc-clients.ts  service-configs.ts
(+92 files in other folders)
