[workspace]
resolver = "2"
members = [
    "lib/rust",
    "api"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
async-trait = "0.1"
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
serde_json = "1.0"