[workspace]
resolver = "2"
members = [
    "api"
]

# Exclude generated code from workspace
exclude = [
    "lib/rust"
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Disable some overly pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_pub_crate = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Explicitly deny dangerous patterns
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unimplemented = "warn"
todo = "warn"

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
async-trait = "0.1"
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-pubsub-client = "1.18"
solana-rpc-client-api = "1.18"
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }

# Structured logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"