[package]
name = "protosol-solana-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio.workspace = true
tonic.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-pubsub-client.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true
uuid.workspace = true

# Additional dependencies
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
bs58 = "0.5"
hex = "0.4"

# Reference the API crate within the workspace
protosol-api = { path = "../lib/rust" }