[package]
name = "protosol-api"
version = "0.1.0"
edition = "2021"
authors = ["BRBussy"]
description = "Protosol API Rust SDK - Generated protobuf and gRPC code"
repository = "https://github.com/BRBussy/protosol"
license = "MIT"

[dependencies]
prost = "0.13"
tonic = "0.12"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"