[package]
name = "protochain-api"
version = "0.1.0"
edition = "2021"
authors = ["BRBussy"]
description = "Protochain API Rust SDK - Generated protobuf and gRPC code"
repository = "https://github.com/BRBussy/protochain"
license = "MIT"

# Generated code - disable linting
# [lints]
# workspace = true

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "0.14"